Refactor Order products field to use DTO